added default user agent

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -270,7 +270,7 @@
      <string/>
     </property>
     <property name="text">
-     <string/>
+     <string>Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36</string>
     </property>
     <property name="placeholderText">
      <string>User-Agent (opt)</string>
